Add form styles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,3 +29,12 @@ body {
 	cursor: pointer;
 	color: #880e4f;
 }
+
+form {
+	background: #fff;
+	padding: 20px;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 400px;
+}
