--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,3 +38,33 @@ form {
 	bottom: 0;
 	width: 400px;
 }
+
+form .field {
+	display: grid;
+	grid-template-columns: 1fr, 1fr;
+	grid-gap: 10px;
+}
+
+form label {
+	text-align: right;
+	padding: 6px;
+}
+
+form select,
+form input {
+	margin: 4px;
+	padding: 6px;
+	box-sizing: border-box;
+}
+form button {
+	color: white;
+	font-size: 2em;
+	background: #ad1f57;
+	border: 0;
+	padding: 0 10px;
+	border-radius: 50%;
+	cursor: pointer;
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+}
